# a2ui-concierge

./: .gitignore  README.md
app/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/androidApp/: build.gradle.kts
app/androidApp/src/main/assets/: a2ui-host.js
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/iosApp/: README.md
app/iosApp/iosApp/: ContentView.swift  Info.plist
app/iosApp/iosApp.xcodeproj/: project.pbxproj
app/shared/: build.gradle.kts
backend/: .env.example  .gitignore
backend/src/concierge/: a2ui.py  agent.py  app.py  catalog.json  catalog.py  credential_verifier.py  payments.py  profile.py  prompts.py  tools.py
backend/tests/: test_a2ui.py  test_app.py  test_tools.py
backend/tests/fixtures/: a2ui_product_detail.json  a2ui_products.json
docs/: a2ui-shapes.md
docs/superpowers/plans/: 2026-05-11-fastmcp-migration.md
docs/superpowers/specs/: 2026-05-07-a2ui-android-shopping-demo-design.md  2026-05-11-fastmcp-migration-design.md
host-bundle/: index-android.html  index.html  package-lock.json  package.json  vite.config.js
host-bundle/src/: shim.js  theme.css
host-bundle/src/components/: card-grid.js  chip-group.js  concierge-form.js  confirmation-card.js  payment-challenge.js  product-detail.js  tx-detail.js
kmp/: README.md  settings.gradle.kts
kmp/gradle/: libs.versions.toml
kmp/shared/: build.gradle.kts
mcp/: data.py  dcql.py  pyproject.toml  server.py  sessions.py
mcp/tests/: test_data.py  test_dcql.py  test_server.py  test_sessions.py
(+53 files in other folders)
